# migri-assistant

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pyrefly.toml  pytest.ini  results.json  run_tests.py  scrapy.cfg  setup_dirs.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
migri_assistant/: __init__.py  cli.py  config.py  gradio_app.py  settings.py  utils.py  utils.py.delete
migri_assistant/config/: parser_configs.yaml
migri_assistant/crawler/: __init__.py  crawler.py  runner.py  settings.py
migri_assistant/models/: __init__.py  document.py  rag_service.py
migri_assistant/parsers/: __init__.py  base_parser.py  config_models.py  migri_parser.py  universal_parser.py
migri_assistant/prompts/: __init__.py  prompt_loader.py  system_prompt.md  user_query.md
migri_assistant/scrapers/: base_scraper.py  migri_scraper.py  scrapy_scraper.py
migri_assistant/spiders/: migri_spider.py  web_spider.py
migri_assistant/stubs/: README.md  __init__.py
migri_assistant/utils/: __init__.py  embedding_utils.py  markdown_utils.py  text_utils.py
migri_assistant/vectorstore/: __init__.py  chroma_store.py  vectorizer.py
stubs/: frontmatter.pyi
tapio/: __init__.py  app.py  cli.py  gradio_app.py
tapio/config/: __init__.py  config_manager.py  config_models.py  parser_configs.yaml  settings.py  site_configs.yaml
tapio/crawler/: __init__.py  crawler.py  runner.py  settings.py
tapio/models/: __init__.py  document.py  llm_service.py  rag_service.py
tapio/parser/: __init__.py  config_models.py  parser.py
tapio/parsers/: __init__.py  base_parser.py  config_models.py  parser.py  universal_parser.py
tapio/prompts/: __init__.py  prompt_loader.py  system_prompt.md
tapio/services/: __init__.py  document_retrieval_service.py  llm_service.py  rag_orchestrator.py  rag_service.py
tapio/utils/: __init__.py  embedding_utils.py  markdown_utils.py
tapio/vectorstore/: __init__.py  vectorizer.py
tests/: conftest.py  test_cli.py  test_gradio_app.py
tests/config/: test_config.py  test_config_manager.py  test_config_models.py  test_settings.py
tests/crawler/: test_crawler.py  test_runner.py  test_settings.py
tests/models/: test_document.py  test_llm_service.py  test_prompt_loader.py  test_rag_service.py
tests/parser/: test_config_models.py  test_parser.py  test_relative_links.py
tests/parsers/: test_base_parser.py  test_migri_parser.py  test_parser.py  test_relative_links.py  test_universal_parser.py
tests/prompts/: test_prompt_loader.py
tests/services/: test_document_retrieval_service.py  test_llm_service.py  test_rag_orchestrator.py  test_rag_service.py
tests/utils/: test_embedding_utils.py  test_markdown_utils.py  test_text_utils.py
tests/vectorstore/: test_chroma_store.py  test_vectorizer.py
