[project]
name = "migri-assistant"
version = "0.1.0"
description = "An assistant for processing Migri website content"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Finntegrate Team", email = "info@finntegrate.org"}
]
dependencies = [
    "scrapy>=2.11.0",
    "typer>=0.9.0",
    "lxml>=4.9.3",
    "html2text>=2020.1.16",
    "pyyaml>=6.0.1",
    "langchain-text-splitters>=0.3.8",
    "python-frontmatter>=1.1.0",
    "chromadb>=1.0.5",
    "langchain-community>=0.3.21",
    "langchain>=0.3.23",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
migri-scrape = "migri_assistant.cli:app"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["migri_assistant"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
